style.css
.chakra-petch-light {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 300;
    font-style: normal;
  }
  
  .chakra-petch-regular {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 400;
    font-style: normal;
  }
  
  .chakra-petch-medium {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 500;
    font-style: normal;
  }
  
  .chakra-petch-semibold {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 600;
    font-style: normal;
  }
  
  .chakra-petch-bold {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 700;
    font-style: normal;
  }
  
  .chakra-petch-light-italic {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 300;
    font-style: italic;
  }
  
  .chakra-petch-regular-italic {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 400;
    font-style: italic;
  }
  
  .chakra-petch-medium-italic {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 500;
    font-style: italic;
  }
  
  .chakra-petch-semibold-italic {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 600;
    font-style: italic;
  }
  
  .chakra-petch-bold-italic {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 700;
    font-style: italic;
  }  

body {
    font-family: "Chakra Petch", sans-serif;
    font-weight: 400;
    font-style: normal;
    background-color: #f4f4f4;
    margin: 0;
    padding-bottom: 300px;
    text-align: center;
}

h1 {
  text-align: center;
  margin-bottom: 20px;
  color: #333;
}
.grid-container {
  margin-bottom: 40px;
  display: flex; /* Use flexbox to center the grid */
  flex-direction: column; /* Align title and grid vertically */
  align-items: center; /* Center horizontally */
}

.grid-container h2 {
  text-align: center;
  margin-bottom: 20px;
  color: #333;
}

.image-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(25vw, 1fr));
  grid-gap: 1vw;
  padding: 1vw;
  max-width: 1200px;
  margin: auto;
  margin-bottom: 40px;
}

.image-grid h2 {
  text-align: center;
  margin-bottom: 20px;
  color: #333;
}

.grid-item {
  background-color: white;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  color: #333;
  overflow: hidden;
  text-decoration: none; /* Remove default link underline */
  display: flex; /* Use flexbox */
  flex-direction: column; /* Align items vertically */
  max-width: 27vw;
}

.grid-item-text {
  background-color: white;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  color: #333;
  overflow: hidden;
  text-decoration: none; /* Remove default link underline */
  padding: 20px;
  text-align: center;
  display: flex; /* Use flexbox */
  flex-direction: column; /* Align items vertically */
}

.grid-item img {
  width: 100%;
  height: auto;
  display: block;
}

.caption {
  padding: 15px;
  margin-top: auto; /* Push caption to bottom */
}

.caption h3 {
  margin-top: 0;
}

.caption p {
  font-size: 0.9em;
  margin: 0;
}

/* Responsive adjustments */
@media (max-width: 768px) {
  .image-grid {
      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  }
}

